<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jcommon</artifactId>
        <groupId>run.mone</groupId>
        <version>1.4-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>docean</artifactId>

    <properties>
        <netty.version>4.1.97.Final</netty.version>
    </properties>

    <dependencies>


        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>easy</artifactId>
            <version>1.4-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib-nodep</artifactId>
            <version>3.3.0</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.5</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.10.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.mortbay.jetty.alpn/alpn-boot -->
        <!--        <dependency>-->
        <!--            <groupId>org.mortbay.jetty.alpn</groupId>-->
        <!--            <artifactId>alpn-boot</artifactId>-->
        <!--            <version>8.1.13.v20181017</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>1.1</version>
            <scope>compile</scope>
        </dependency>


    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <!--                    <compilerArgs>&#45;&#45;source 19</compilerArgs>-->
                    <compilerArgs>--enable-preview</compilerArgs>
                    <compilerVersion>20</compilerVersion>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>


        </plugins>


    </build>


</project>